assets/css/style.css
/* CSS Styling */

/*Overall font*/
body {
  font-family:'Montserrat', sans-serif;
  font-size: 1rem;
}
  
  /* Headers and Links */
  
  h1, h2 {
    font-weight: 700 !important;
    color:#178617
  }
  
  h2 {
    font-size: 2.5em;
  }
  
  /* HYPERLINKS */
  
  a {
    color: rgba(36, 165, 36, 0.897);
    text-decoration: none;
    font-weight: 700;
  }
  
  a:hover {
    color: #000000 !important;
    text-decoration: none;
    font-weight: 700;
  }
  
  /* SPAN */
  
  span {
    padding-left: 1vw;
    padding-right: 1vw;
  }
  
  .nav {
    background-color: #ffffff;
    text-align: right;
  }
  
  .jumbotron {
    background-image: url(https://www.wallpapertip.com/wmimgs/82-822562_src-gorgerous-coding-background-data-id-programming.jpg) !important;
    background-position: 50% 100%;
    background-attachment: fixed;
    opacity: 0.9;
  }
  
  .nav, .portfolio, .footer {
    background-color: #eeeeee;
  }
  
  .title {
    background-color: hsla(120,60%,70%,0.3);
    color: white;
    font-size: 4.5rem;
  }
  .jumbo-caption {
    background-color:hsla(120,60%,70%,0.3);
    font-size: 1.7rem;
    color: white;
  }
  
  /* Text */
  .centered {
    text-align: center;
  }
  
  input, textarea {
    font-size: 0.8rem;
  }
 
  /* Images */
  .img-responsive {
    max-width: 100%;
    height: auto;
    border-radius: 3%;
  }
  
  /* Button */
  .btn {
    -webkit-border-radius: 28;
    -moz-border-radius: 28;
    border-radius: 28px;
    background-color: hsla(120,60%,70%,0.3); 
    padding: 10px 20px 10px 20px;
    text-decoration: none;
    font-weight: 700;
    cursor: pointer;
    font-size: 1.1rem;
  }
  
  .btn:hover {
    text-decoration: none;
    color: #000000;
  }
  
  /* Cursor */
  .pointer-cursor {
    cursor: pointer;
  }
  
  
  /* GRID  */
  .container {
    padding: 0;
    margin: 0;
    display: grid;
    grid-template: repeat(6, auto) / 1fr;
  }
  
  .nav {
    padding-top: 3vh;
    padding-bottom: 3vh;
  }

  .nav-content, .jumbotron-content, .about-content, .portfolio-content, .contact-content, .footer-content {
    margin-left: 10vw;
    margin-right: 10vw;
  }
  
  .about-content {
    padding-bottom: 2vh;
    margin-left: 10vw;
    margin-right: 10vw;
  }
  
  .about-avatar {
    grid-area: aa;
    padding-right: 2vw;
    padding-top: 4vh;
    padding-bottom: 2vh;
  }
  .about-text {
    grid-area: at;
  }
  
  .portfolio-content div:nth-child(1) {
    grid-area: a;
  }
  .portfolio-content div:nth-child(2) {
    grid-area: b;
  }
  .portfolio-content div:nth-child(3) {
    grid-area: c;
  }
  .portfolio-content div:nth-child(4) {
    grid-area: d;
  }
  .portfolio-content div:nth-child(5) {
    grid-area: e;
  }
  .portfolio-content div:nth-child(6) {
    grid-area: f;
  }
  
  .horizontal-line {
    margin-left: 10vw;
    margin-right: 10vw;
  }
  
  .social-container item {
   display: flex;
 
  }
  
  /* MIN WIDTH - 1200PX */
  @media (min-width: 1200px) {
  
    .about-content {
      display: grid;
      grid-template-areas:
      "aa aa at at at at";
    }
    .portfolio-content {
      display: grid;
      grid-template-areas:
      "a a b b c c"
      "d d e e f f";
    }
  
    .jumbotron {
      padding-top: 20vh;
      padding-bottom: 20vh;
      background-color: #db7c0e;
    }
    .img-av {
      max-width: 250px;
      height: auto;
      border-radius: 50%;
    }
  }
  
  
  /* MIN WIDTH - 106PX AND MAX WIDTH - 1999PX */
  @media (max-width: 1199px) {
  
    .about-content {
      display: grid;
      grid-template-areas:
      "aa aa aa"
      "at at at";
    }
    .portfolio-content {
      display: grid;
      grid-template-areas:
      "a a b b"
      "c c d d"
      "e e f f";
    }
    .jumbotron {
      padding-top: 20vh;
      padding-bottom: 20vh;
    }
  
    .img-av {
      max-width: 200px;
      height: auto;
      border-radius: 50%;
    }
  }
  
  
  
  /* Max Width 600PX */
  @media (max-width: 600px) {
  
    .about-content {
      display: grid;
      grid-template-areas:
      "aa aa aa"
      "at at at";
    }
    .portfolio-content {
      display: grid;
      grid-template-areas:
      "a"
      "b"
      "c"
      "d"
      "e"
      "f";
    }
    .jumbotron {
      padding-bottom: 25vh;
    }
    .btn {
      font-size: 0.9rem;
      color:#db7c0e
    }
  
    .jumbotron {
      padding-top: 15vh;
      padding-bottom: 15vh;
    }
    .nav {
      text-align: center;
    }
    .img-av {
      max-width: 170px;
      height: auto;
      border-radius: 50%;
    }
    span {
      padding-left: 1vw;
      padding-right: 1vw;
      font-size: 0.9rem;
    }
  }
/*footer attempt*/
  body {
    margin: 0;
    padding: 5% 10%;
    background: #dcd7ce;
    color: #333;
    font-family: sans-serif;
    font-size: 100%;
  }
  p {
    text-align: center;
    padding-top: 1em;
  }
  ul.social-set {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    list-style: none;
    margin: 0;
    padding: 0;
    height: auto;
    width: auto;
  }
  ul.social-set li {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  /* Font Awesome icons */
  a.sociali {
    font-size: 2em;
    line-height: 1.2em;
    padding: 10px;
    background: #accfc0;
    color: #fff;
    margin-right: 10px;
    margin-bottom: 10px !important;
    padding-bottom: 10px !important;
  }
  a.sociali:hover, a.sociali:focus {
    background: #6d8785;
  }
  

